Hugo: Fix scrolling issues in codeblock
- Move highlight config from config.toml to markup.toml
- Make sure horizontal overflow doesn't get wrapped but gets a scrollbar
- Make sure vertical overflow for pre doesn't get cut of but shows
  all content. Remove height: 100% from css because this only works when
  pre or highlight is the only child which is not the case.
- Use flex to make last highlight or pre tag in a column fill out the
  remaining space.

For: https://linear.app/usmedia/issue/CUE-177 and
     https://linear.app/usmedia/issue/CUE-176

Closes #330 as merged.

Reviewed-on: https://review.gerrithub.io/c/cue-lang/cuelang.org/+/551089
TryBot-Result: CUEcueckoo <cueckoo@cuelang.org>

--- a/hugo/assets/scss/base/base.scss
+++ b/hugo/assets/scss/base/base.scss
@@ -346,13 +346,10 @@ pre {
     border: 1px solid var(--pre-border-color);
     border-radius: $b-radius;
     color: var(--pre-color);
-    height: 100%;
     margin: 0 0 1rem;
     max-width: 100%;
-    overflow: auto;
+    overflow-x: auto;
     padding: 1rem 1.25rem;
-    white-space: pre-wrap;
-    word-wrap: break-word;
 }
 
 audio,
